Frontend: StudentMode align fix (#341)

--- a/src/Frontend/src/components/common/StudentMode/StudentMode.less
+++ b/src/Frontend/src/components/common/StudentMode/StudentMode.less
@@ -1,6 +1,7 @@
 .toggleWrapper {
   display: inline-flex;
   justify-content: center;
+  align-items: center;
   user-select: none;
 }
 
